Change handling of Shift+Click and mouse drag selection extension with granularity

This patch change handling Shift+Click and mouse drag selection extension with
granularity, aka granularity expansion, to use current base position of
selection instead of a position where granularity expansion started, e.g.
double-click or triple-click.


# Background
The granularity expansion is started by double-click, for word, or triple-click,
for paragraph. Once granularity extending started, farther
selection extension is done by granularity, e.g. for word granularity, selection
is extended by word, e.g. "^abc de|f" to "^abc def|" where "^" is base position
and "|" is extend position.

Before this patch, we use base position as a position where user starts
granularity expansion and extent which specified by user for constructing
|VisibleSelection| and hold base/extent as user specified positions and adjust
positions with granularity into start/end positions.

After this patch, we use current base position and granularity adjusted extent
position for constructing |VisibleSelection| and base/extent and start/end
hold extended positions.

Note: start/end are result of calling of |Most{Back,For}wardCaretPosition()| of
base/extent.

# Changes in "shift-click.html"
For Mac, it is handled by |ExtendSelectionAsNonDirectional()|, this patch fixes
the issue[1], see in "shift-click.html" changes for "mac" behavior. When extent
position at end of word, granularity expansion moves extent position to start of
words, e.g. "^foo| bar" => "^foo |bar", in other words, word granularity
expansion selection whitespaces.

For non-Mac, is is handle by |ExtendSelectionAsnDirectional()|, this patch
keeps correct direction of selection.

Here is steps of user actions:
1. "<div id="first">|one <span id="start"></span>two^ three</div>"
  base is after "two"
2. "<div id="first">one |<span id="start"></span>two^ three</div>"
  Shift+Click before "span id=start"
3. "<div id="first">one <span id="start"></span>|two^ three</div>"
  Granularity expansion with visible position canonicalization

Before this patch step 3 is
3. "<div id="first">one <span id="start"></span>^two| three</div>"
  Granularity expansion with visible position canonicalization for
  base/extent are before "two" where double-click is occurred.

Note: This patch is also a preparation of unify base/extent and start/end[2]


[1] https://bugs.webkit.org/show_bug.cgi?id=36256 shift+click to extend a
wordgranularity selection backwards selects the space after
[2] http://crbug.com/230267 We should get rid of the concept of base and extent

Bug: 692923, 230267
Change-Id: Icbb04e4c19637f4a1481891c4d3acdbc885424bc