third_party/WebKit/Source/core/editing/SelectionController.cpp
@@ -170,9 +170,43 @@ static SelectionInFlatTree ExtendSelectionAsDirectional(
     TextGranularity granularity) {
   DCHECK(!selection.IsNone());
   DCHECK(position.IsNotNull());
+  const PositionInFlatTree& start = selection.Start();
+  const PositionInFlatTree& end = selection.End();
+  if (selection.IsBaseFirst()) {
+    if (position < start) {
+      // Extend backward: *...^...| => |...^...
+      return SelectionInFlatTree::Builder()
+          .SetBaseAndExtent(
+              ComputeEndRespectingGranularity(
+                  start, PositionInFlatTreeWithAffinity(start), granularity),
+              ComputeStartRespectingGranularity(
+                  PositionInFlatTreeWithAffinity(position), granularity))
+          .Build();
+    }
+    // Extend forward: ^...|...* => ^......|
+    return SelectionInFlatTree::Builder()
+        .SetBaseAndExtent(
+            start,
+            ComputeEndRespectingGranularity(
+                start, PositionInFlatTreeWithAffinity(position), granularity))
+        .Build();
+  }
+
+  if (position < end) {
+    // Extend backward: *...|...^ => |......^
+    return SelectionInFlatTree::Builder()
+        .SetBaseAndExtent(
+            end, ComputeStartRespectingGranularity(
+                     PositionInFlatTreeWithAffinity(position), granularity))
+        .Build();
+  }
+
+  // Extend forward: |...^...*  => ...^...|
   return SelectionInFlatTree::Builder()
-      .SetBaseAndExtent(selection.Base(), position)
-      .SetGranularity(granularity)
+      .SetBaseAndExtent(
+          ComputeStartRespectingGranularity(end, granularity),
+          ComputeEndRespectingGranularity(
+              end, PositionInFlatTreeWithAffinity(position), granularity))
       .Build();
 }
 
@@ -187,22 +221,33 @@ static SelectionInFlatTree ExtendSelectionAsNonDirectional(
   const PositionInFlatTree& end = selection.End();
   if (position < start) {
     return SelectionInFlatTree::Builder()
-        .SetBaseAndExtent(end, position)
-        .SetGranularity(granularity)
+        .SetBaseAndExtent(
+            end, ComputeStartRespectingGranularity(
+                     PositionInFlatTreeWithAffinity(position), granularity))
         .Build();
   }
   if (end < position) {
     return SelectionInFlatTree::Builder()
-        .SetBaseAndExtent(start, position)
-        .SetGranularity(granularity)
+        .SetBaseAndExtent(
+            start,
+            ComputeEndRespectingGranularity(
+                start, PositionInFlatTreeWithAffinity(position), granularity))
         .Build();
   }
   const int distance_to_start = TextDistance(start, position);
   const int distance_to_end = TextDistance(position, end);
+  if (distance_to_start <= distance_to_end) {
+    return SelectionInFlatTree::Builder()
+        .SetBaseAndExtent(
+            end, ComputeStartRespectingGranularity(
+                     PositionInFlatTreeWithAffinity(position), granularity))
+        .Build();
+  }
   return SelectionInFlatTree::Builder()
-      .SetBaseAndExtent(distance_to_start <= distance_to_end ? end : start,
-                        position)
-      .SetGranularity(granularity)
+      .SetBaseAndExtent(
+          start,
+          ComputeEndRespectingGranularity(
+              start, PositionInFlatTreeWithAffinity(position), granularity))
       .Build();
 }
 
